src/test/fail/exceptions/dual_raise.lly
#[
DivisionByZeroError: Attempt to divide by zero.
Traceback:
    File "dual_raise.lly", from __main__ at line 10
]#

try:
    raise ValueError::new("10")
except ValueError:
    var v = 1 / 0
